# b-graph

./: .env.example  .gitignore  Questions.md  README.md  main.py  pyproject.toml
.codex/: AGENTS.md  CHECKLIST.md  PROMPTS.md
backend/: config.py  main.py
backend/db/: engine.py  inspect_raw_data.py  loader.py  schema_mapping.py
backend/graph/: builder.py  schema.py
backend/llm/: client.py  pipeline.py  prompts.py
backend/routes/: __init__.py  chat.py  graph.py
frontend/: index.html  package.json  pnpm-lock.yaml
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/components/: ChatPanel.tsx  GraphView.tsx  MessageBubble.tsx  NodeDetail.tsx
frontend/src/store/: graphStore.ts
